Add more projects, change porfile sentence, added animation to profile picture

--- a/about.html
+++ b/about.html
@@ -136,7 +136,10 @@
     <div class="site-inner container">
       <div class="brand">
         <div class="avatar-wrap">
-          <img class="avatar" src="assets/img/me.png" alt="Katherine Avatar">
+          <span class="avatar-stack" aria-label="Katherine profile image">
+            <img class="avatar avatar-a" src="assets/img/me.png" alt="Katherine avatar illustration">
+            <img class="avatar avatar-b" src="assets/img/photo_me.jpeg" alt="Katherine photo">
+          </span>
           <span class="avatar-badge"></span>
         </div>
         <span>About — Pole Position🏁</span>
