--- a/contact.html
+++ b/contact.html
@@ -237,7 +237,10 @@
     <div class="site-inner container">
       <div class="brand">
         <div class="avatar-wrap">
-          <img class="avatar" src="assets/img/me.png" alt="Katherine Avatar">
+          <span class="avatar-stack" aria-label="Katherine profile image">
+            <img class="avatar avatar-a" src="assets/img/me.png" alt="Katherine avatar illustration">
+            <img class="avatar avatar-b" src="assets/img/photo_me.jpeg" alt="Katherine photo">
+          </span>
           <span class="avatar-badge"></span>
         </div>
         <span>Contact — Pole Position🏁</span>
@@ -309,7 +312,8 @@
           <div class="actions"><button class="btn" id="buildMail">Open in Email ✉️</button><button class="btn"
               id="copyAll">Copy All 📋</button></div>
           <div class="small">Tip: selecting a <strong>Topic</strong>, an <strong>Urgency</strong>, and a
-            <strong>Template</strong> will pre-fill the subject and message.</div>
+            <strong>Template</strong> will pre-fill the subject and message.
+          </div>
         </div>
       </article>
 
