--- a/index.html
+++ b/index.html
@@ -170,7 +170,10 @@
     <div class="site-inner container">
       <div class="brand">
         <div class="avatar-wrap">
-          <img class="avatar" src="assets/img/me.png" alt="Katherine Avatar">
+          <span class="avatar-stack" aria-label="Katherine profile image">
+            <img class="avatar avatar-a" src="assets/img/me.png" alt="Katherine avatar illustration">
+            <img class="avatar avatar-b" src="assets/img/photo_me.jpeg" alt="Katherine photo">
+          </span>
           <span class="avatar-badge"></span>
         </div>
         <span>Katherine Isabela Hsiung Chen — Pole Position🏁</span>
@@ -186,8 +189,8 @@
 
   <section class="hero">
     <div class="container">
-      <h1>Hi, I’m Katherine - Computer Science student (soon Simulation Engineering) building playful-aesthetic code.
-      </h1>
+      <h1>Hi, I’m Katherine, a Computer Science graduate and Simulation Engineering student chasing that spark where
+        simulation meets code.</h1>
       <div class="driver-bar">
         <span>Favorite drivers:</span>
         <button class="btn" data-theme="carlos">Carlos Sainz Jr.</button>
