--- a/about.html
+++ b/about.html
@@ -170,26 +170,32 @@
     </div>
 
     <section class="grid">
-      <article class="card">
-        <h2>Where I’m headed</h2>
-        <p>Finishing Computer Science and starting Simulation Engineering. I love turning ideas into working systems
-          with polish.</p>
-      </article>
-      <article class="card">
-        <h2>Tech I enjoy</h2>
-        <p>Clean C++ builds, Unreal blueprints for fast experiments, React Native + TypeScript for app UX, and little UI
-          details that make everything feel intentional.</p>
-      </article>
-      <article class="card">
-        <h2>Why F1</h2>
-        <p>Strategy, timing, teamwork—and that moment when everything clicks. I like shipping software with the same
-          energy.</p>
-      </article>
-      <article class="card">
-        <h2>How I work</h2>
-        <p>Sketch the flow, build the core, add fit-and-finish. I care about accessibility, performance, and joyful
-          details.</p>
-      </article>
+      <section class="grid">
+        <article class="card">
+          <h2>What pulls me in</h2>
+          <p>I love the moment a model stops being a sketch and starts behaving like a real system. Motion, constraints,
+            clearances, cause and effect. I like work that feels precise and alive.</p>
+        </article>
+
+        <article class="card">
+          <h2>What I build</h2>
+          <p>SolidWorks parts and assemblies, motion studies, and mechanisms you can validate step by step. I also build
+            software projects when code is the best way to make an idea interactive, usable, and clean.</p>
+        </article>
+
+        <article class="card">
+          <h2>Why F1</h2>
+          <p>Because it is engineering with personality. Tiny decisions add up, timing matters, and the best results
+            come from iteration. That is exactly how I like to build.</p>
+        </article>
+
+        <article class="card">
+          <h2>How I work</h2>
+          <p>I start simple, make it correct, then make it feel finished. I test behavior, tighten details, and polish
+            the experience until it looks intentional from every angle.</p>
+        </article>
+      </section>
+
     </section>
   </main>
 
